syntax = "proto3";

package v1;

message ID {
    string id = 1;
}

message Result {
    string id= 1;
    bool status = 2;
}

message Void{}

// implement crud for user

message User {
    string firstName = 1;
    string lastName = 2;
    string userName = 6;
    string email = 3;
    string password = 4;
    string familyID = 5;
}
//read
message ReadUser{
    string firstName = 1;
    string lastName = 2;
    string userName = 5;
    string email = 3;
    string familyID = 4;
}

//update 
message UpdateUser{
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string familyid = 5;
    string password = 6;
}

service Users{
    //create new user
    rpc Create(User) returns(ID) {}
    
    //read user data
    rpc Read(ID) returns(ReadUser) {}
    
    //update user data (logs included)
    rpc Update(UpdateUser) returns(Result) {}
    
    //delete user
    rpc Delete(ID) returns(Result) {}
}

// implement crud for group
message NewGroup{
    float rate = 1;
    string name = 2;
    string orgID = 3;
}
//read
message Group{
    string id = 1;
    float rate = 2;
    string name = 3;
    string orgID = 4;
    repeated ID memID = 5;
}

//update 
message UpdateGroup{
    string id = 1;
    string name = 2;
    float rate = 3;
    string orgID = 4;
}

message GroupMember{
    string id = 1;
    string userid = 2;
}

service Groups{
    rpc Create(NewGroup) returns(ID) {}
    
    rpc Read(ID) returns(Group) {}
   rpc ReadGroupOrganiser(ID) returns(ReadUser) {}
    
    rpc Update(UpdateGroup) returns(Result) {}
    rpc UpdateMember(GroupMember) returns(Result) {}
    
    rpc Delete(ID) returns(Result) {}
}

//Transaction

message NewTransaction{
    float amount =1;
    string userid = 2;
    string date = 3;
}

message Transaction{
    string id = 1;
    float amount = 2;
    string userid = 3;
    string date = 4;
}

service Transactions{
    rpc Create(NewTransaction) returns(Transaction){}
    rpc ReadTransaction(ID) returns(Transaction){}  
}